delivery3_finalcommit